RESOLVED FIXED216258
REGRESSION(r266634): WKThumbnailViewResetsViewStateWhenUnparented is flaky
https://bugs.webkit.org/show_bug.cgi?id=216258
Summary REGRESSION(r266634): WKThumbnailViewResetsViewStateWhenUnparented is flaky
Sihui Liu
Reported 2020-09-07 19:33:10 PDT
...
Attachments
Patch (6.11 KB, patch)
2020-09-07 19:38 PDT, Sihui Liu
no flags
Patch (7.67 KB, patch)
2020-09-07 19:49 PDT, Sihui Liu
no flags
Patch (3.11 KB, patch)
2020-09-10 09:59 PDT, Sihui Liu
no flags
Patch for landing (3.15 KB, patch)
2020-09-10 12:52 PDT, Sihui Liu
no flags
Patch for landing (3.10 KB, patch)
2020-09-11 09:19 PDT, Sihui Liu
ews-feeder: commit-queue-
Sihui Liu
Comment 1 2020-09-07 19:38:50 PDT
Sihui Liu
Comment 2 2020-09-07 19:49:31 PDT
Sihui Liu
Comment 3 2020-09-08 07:47:41 PDT
*** Bug 216263 has been marked as a duplicate of this bug. ***
Ryan Haddad
Comment 4 2020-09-08 10:58:43 PDT
Radar WebKit Bug Importer
Comment 5 2020-09-08 10:58:59 PDT
Sihui Liu
Comment 6 2020-09-09 09:07:11 PDT
Mark this as blocked by 216275 as this could use the SPI introduced there.
Sihui Liu
Comment 7 2020-09-10 09:59:10 PDT
Sihui Liu
Comment 8 2020-09-10 12:52:59 PDT
Created attachment 408469 [details] Patch for landing
EWS
Comment 9 2020-09-10 13:32:53 PDT
commit-queue failed to commit attachment 408469 [details] to WebKit repository.
Ryan Haddad
Comment 10 2020-09-10 18:05:19 PDT
(In reply to EWS from comment #9) > commit-queue failed to commit attachment 408469 [details] to WebKit > repository. Left an "oops" in the changelog :(
Tim Horton
Comment 11 2020-09-10 18:12:34 PDT
(In reply to Ryan Haddad from comment #10) > (In reply to EWS from comment #9) > > commit-queue failed to commit attachment 408469 [details] to WebKit > > repository. > > Left an "oops" in the changelog :( Also the changelog is all out of order, kinda seems like a mis-conflict-resolution or something
Sihui Liu
Comment 12 2020-09-11 09:19:32 PDT
Created attachment 408537 [details] Patch for landing
EWS
Comment 13 2020-09-11 09:54:17 PDT
Committed r266927: <https://trac.webkit.org/changeset/266927> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408537 [details].
Note You need to log in before you can comment on or make changes to this bug.