REGRESSION(r266634): WKThumbnailViewResetsViewStateWhenUnparented is flaky https://bugs.webkit.org/show_bug.cgi?id=216258 <rdar://problem/68515242>

Reviewed by Tim Horton.

r266634 makes activity state changes dispatched after existing CA transaction is committed, which delays update
of page state in web process.

* TestWebKitAPI/Tests/WebKit/WKThumbnailView.mm:
(TestWebKitAPI::TEST):
* TestWebKitAPI/cocoa/TestWKWebView.h:
* TestWebKitAPI/cocoa/TestWKWebView.mm:
(-[TestWKWebView waitUntilActivityStateUpdateDone]):


Canonical link: https://commits.webkit.org/229240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266927 268f45cc-cd09-0410-ab3c-d52691b4dbfc